--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+# 添加如下是拦截 swagger-ui.html 请求需要密码登陆
+security:
+  basic:
+    path: /swagger-ui.html
+    enabled: true
+  user:
+    name: root
+    password: 123456
